; ModuleID = '/home/carl/AnghaBench/obs-studio/libobs/graphics/extr_bounds.c_bounds_merge.c'
source_filename = "/home/carl/AnghaBench/obs-studio/libobs/graphics/extr_bounds.c_bounds_merge.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.bounds = type { i32, i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @bounds_merge(%struct.bounds* %0, %struct.bounds* %1, %struct.bounds* %2) #0 {
  %4 = alloca %struct.bounds*, align 8
  %5 = alloca %struct.bounds*, align 8
  %6 = alloca %struct.bounds*, align 8
  store %struct.bounds* %0, %struct.bounds** %4, align 8
  store %struct.bounds* %1, %struct.bounds** %5, align 8
  store %struct.bounds* %2, %struct.bounds** %6, align 8
  %7 = load %struct.bounds*, %struct.bounds** %4, align 8
  %8 = getelementptr inbounds %struct.bounds, %struct.bounds* %7, i32 0, i32 1
  %9 = load %struct.bounds*, %struct.bounds** %5, align 8
  %10 = getelementptr inbounds %struct.bounds, %struct.bounds* %9, i32 0, i32 1
  %11 = load %struct.bounds*, %struct.bounds** %6, align 8
  %12 = getelementptr inbounds %struct.bounds, %struct.bounds* %11, i32 0, i32 1
  %13 = call i32 @vec3_min(i32* %8, i32* %10, i32* %12)
  %14 = load %struct.bounds*, %struct.bounds** %4, align 8
  %15 = getelementptr inbounds %struct.bounds, %struct.bounds* %14, i32 0, i32 0
  %16 = load %struct.bounds*, %struct.bounds** %5, align 8
  %17 = getelementptr inbounds %struct.bounds, %struct.bounds* %16, i32 0, i32 0
  %18 = load %struct.bounds*, %struct.bounds** %6, align 8
  %19 = getelementptr inbounds %struct.bounds, %struct.bounds* %18, i32 0, i32 0
  %20 = call i32 @vec3_max(i32* %15, i32* %17, i32* %19)
  ret void
}

declare dso_local i32 @vec3_min(i32*, i32*, i32*) #1

declare dso_local i32 @vec3_max(i32*, i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
